# generic-deriving-issue

./: derive-generics-issue.cabal
app/: Main.hs  Test.hs
