cabal-version:      2.4
name:               derive-generics-issue
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nikolay Yakimov
maintainer:         root@livid.pp.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable derive-generics-issue
    main-is:          Main.hs
    other-modules:    Test

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      generic-deriving >= 1.14.1
    hs-source-dirs:   app
    default-language: Haskell2010
